src/test/ui/type-alias-impl-trait/issue-53398-cyclic-types.stderr
error[E0275]: overflow evaluating the requirement `fn() -> Foo {foo}: Sized`
  --> $DIR/issue-53398-cyclic-types.rs:5:13
   |
LL | fn foo() -> Foo {
   |             ^^^
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`issue_53398_cyclic_types`)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0275`.
